--- a/index.html
+++ b/index.html
@@ -32,24 +32,28 @@ Url: <a href=https://js-shj2y7.stackblitz.io>https://js-shj2y7.stackblitz.io</a>
 GitHub: <a href=https://github.com/porris1000/AG1_stackblitz>https://github.com/porris1000/AG1_stackblitz</a><br>
 
 
-<h1>Visualización – AG1</h1>
+<h1>Visualización – 1</h1>
 
 <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=1591159583&amp;format=interactive"></iframe>
 <br>
 
-<h1>Visualización – AG2</h1>
+<h1>Visualización – 2</h1>
 
 <iframe width="710" height="341" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=572176608&amp;format=interactive"></iframe>
 <br>
 
-<h1>Visualización – AG3</h1>
+<h1>Visualización – 3</h1>
 
 <iframe id="datawrapper-chart-pLbne" src="https://datawrapper.dwcdn.net/mPItz/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
 <img src="https://datawrapper.dwcdn.net/mPItz/full.png" style="width: 0; min-width: 100% !important; border: none;" height="400"/>
 
 <br>
 
-<h1>Visualización – AG4</h1>
+<h1>Visualización – 4</h1>
 
 <iframe id="datawrapper-chart-pLbne" src="https://datawrapper.dwcdn.net/pLbne/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
 <img src="https://datawrapper.dwcdn.net/pLbne/full.png" style="width: 0; min-width: 100% !important; border: none;" height="400"/>
+
+
+<b>Google Colab:</b>
+<a href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing">
