--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
   }    
 </style>
 
+<head>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></
+   script>
+</head>
+
 Nombre: Ana Porras <br>
 Url: <a href=https://js-shj2y7.stackblitz.io>https://js-shj2y7.stackblitz.io</a><br>
 GitHub: <a href=https://github.com/porris1000/AG1_stackblitz>https://github.com/porris1000/AG1_stackblitz</a><br>
@@ -56,4 +63,7 @@ GitHub: <a href=https://github.com/porris1000/AG1_stackblitz>https://github.com/
 
 
 <b>Google Colab:</b>
-<a href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing">
+<a href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing"></a>
+
+<h2> Gráfico de Columnas con D3Plus</h2>
+<div id="viz1"></div>
