--- a/index.html
+++ b/index.html
@@ -1,68 +1,105 @@
 <style>
   .article {
-      max-width: 700px;
-      margin: auto;
-      font-family: sans-serif;
-      font-weight: 300;
-      line-height: 1.3;
+    max-width: 700px;
+    margin: auto;
+    font-family: sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
   }
   h1 {
-      font-size:28px;
+    font-size: 28px;
   }
   p {
-      margin: 40px 0px;
+    margin: 40px 0px;
   }
-  iframe[src*="datawrapper.dwcdn.net"] + img {
-      display: none;
+  iframe[src*='datawrapper.dwcdn.net'] + img {
+    display: none;
   }
 
   @media print {
-      iframe[src*="datawrapper.dwcdn.net"] {
-          display: none;
-      }
-      iframe[src*="datawrapper.dwcdn.net"] + img {
-          display: block;
-          height: 100%;
-      }
-  }    
+    iframe[src*='datawrapper.dwcdn.net'] {
+      display: none;
+    }
+    iframe[src*='datawrapper.dwcdn.net'] + img {
+      display: block;
+      height: 100%;
+    }
+  }
 </style>
 
 <head>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></script>
 </head>
 
-Nombre: Ana Porras <br>
-Url: <a href=https://js-shj2y7.stackblitz.io>https://js-shj2y7.stackblitz.io</a><br>
-GitHub: <a href=https://github.com/porris1000/AG1_stackblitz>https://github.com/porris1000/AG1_stackblitz</a><br>
+Nombre: Ana Porras <br />
+Url:
+<a href="https://js-shj2y7.stackblitz.io">https://js-shj2y7.stackblitz.io</a
+><br />
+GitHub:
+<a href="https://github.com/porris1000/AG1_stackblitz"
+  >https://github.com/porris1000/AG1_stackblitz</a
+><br />
 
+<h1>Visualización – AG1</h1>
 
-<h1>Visualización – 1</h1>
+<iframe
+  width="600"
+  height="371"
+  seamless
+  frameborder="0"
+  scrolling="no"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=1591159583&amp;format=interactive"
+></iframe>
+<br />
 
-<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=1591159583&amp;format=interactive"></iframe>
-<br>
+<iframe
+  width="710"
+  height="341"
+  seamless
+  frameborder="0"
+  scrolling="no"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=572176608&amp;format=interactive"
+></iframe>
+<br />
 
-<h1>Visualización – 2</h1>
+<iframe
+  id="datawrapper-chart-pLbne"
+  src="https://datawrapper.dwcdn.net/mPItz/1/"
+  scrolling="no"
+  frameborder="0"
+  style="width: 0; min-width: 100% !important; border: none"
+  height="400"
+></iframe>
+<img
+  src="https://datawrapper.dwcdn.net/mPItz/full.png"
+  style="width: 0; min-width: 100% !important; border: none"
+  height="400"
+/>
+<br />
 
-<iframe width="710" height="341" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR19hMiOBD5Kc91uhESpa6MvgTpeKGXEmz_MEgo6n3C9MSyKWvRzF0OLStciAnyVn9HQldL90qRyKUk/pubchart?oid=572176608&amp;format=interactive"></iframe>
-<br>
+<iframe
+  id="datawrapper-chart-pLbne"
+  src="https://datawrapper.dwcdn.net/pLbne/4/"
+  scrolling="no"
+  frameborder="0"
+  style="width: 0; min-width: 100% !important; border: none"
+  height="400"
+></iframe>
+<img
+  src="https://datawrapper.dwcdn.net/pLbne/full.png"
+  style="width: 0; min-width: 100% !important; border: none"
+  height="400"
+/>
 
-<h1>Visualización – 3</h1>
-
-<iframe id="datawrapper-chart-pLbne" src="https://datawrapper.dwcdn.net/mPItz/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-<img src="https://datawrapper.dwcdn.net/mPItz/full.png" style="width: 0; min-width: 100% !important; border: none;" height="400"/>
-
-<br>
-
-<h1>Visualización – 4</h1>
-
-<iframe id="datawrapper-chart-pLbne" src="https://datawrapper.dwcdn.net/pLbne/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe>
-<img src="https://datawrapper.dwcdn.net/pLbne/full.png" style="width: 0; min-width: 100% !important; border: none;" height="400"/>
-
+<h1>Visualización – AG3</h1>
 
 <b>Google Colab:</b>
-<a href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing"></a>
+<a
+  href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing"
+  >https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing</a
+>
 
-<h2> Gráfico de Columnas con D3Plus</h2>
+<h2>Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
