--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@ GitHub:
   style="width: 0; min-width: 100% !important; border: none"
   height="400"
 />
+<br />
 
 <h1>Visualización – AG3</h1>
 
-<b>Google Colab:</b>
+<h2>Google Colab:</h2>
 <a
   href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing"
   >https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing</a
