--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@ GitHub:
   href="https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing"
   >https://colab.research.google.com/drive/1k8ZZYSGTMq8gg3mjXU88GuygmNElG6Fc?usp=sharing</a
 >
+<br />
 
 <h2>Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
+<br />
+
+<h2>Reutilizar código. Barras</h2>
+<div id="viz2"></div>
+<br />
+
+<h2>Caja y Bigotes</h2>
+<div id="viz3"></div>
